<resources>
    <string name="app_name">Metamor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_order">Order</string>

    <string name="menu_home">Home</string>
    <string name="menu_list_item">List Item</string>
    <string name="menu_add_item">Tambah Item</string>
    <string name="menu_customer">Pelangan</string>
    <string name="name">Nama</string>
    <string name="price">Harga</string>
    <string name="image_add">Image Add</string>
    <string name="photo">Photo</string>
    <string name="save">SIMPAN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_customer">Tambah Customer</string>
    <string name="image_delete">Image Delete</string>
    <string name="total_cash">Total Bayar</string>
    <string name="value_price">Rp. 0,00</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Simpan</string>
    <string name="label_name_item">Name Item</string>
    <string name="label_quantity">Jumlah</string>
    <string name="label_order">Order</string>
    <string name="name_item">Nama Item</string>
    <string name="name_customer">Nama Customer</string>
    <string name="phone_number">No Handphone</string>
    <string name="save_customer">Simpan Customer</string>
    <string name="email">Email</string>
    <string name="search_item">Search Item</string>
    <string name="action_customer">Customer</string>
    <string name="select_name">Pilih Nama Customer</string>
    <string name="label_charge">Bayar</string>
    <string name="label_total">Total</string>
    <string name="label_total_value">Rp. 0.0</string>
    <string name="label_ppn">Pajak (11%)</string>
    <string name="label_sub_total">Sub Total</string>
    <string name="total_money">Jumlah Uang</string>
    <string name="label_20000">20.000</string>
    <string name="label_50000">50.000</string>
    <string name="label_total_payment">Total Bayar</string>
    <string name="label_total_rp">Rp. 0.0</string>
    <string name="label_100000">100.000</string>
    <string name="label_200000">200.000</string>
    <string name="label_return_cash">Jumlah Kembalian</string>
    <string name="label_total_quantity">Jumlah Pemesanan</string>
    <string name="menu_invoice">Invoice</string>
    <string name="menu_setting">Setting</string>
    <string name="label_cash">Tunai</string>
    <string name="label_information">Informasi</string>
    <string name="label_yes">Iya</string>
    <string name="label_no">Tidak</string>
    <string name="label_price">Anda yakin ingin bayar ?</string>
    <string name="label_ok">Oke</string>
    <string name="label_failed_save_price">Anda gagal untuk menyimpan data, mohon ulang kembali</string>
    <string name="label_notif">Pemberitahuan</string>
    <string name="label_success_add_item">Berhasil menambahkan item terbaru</string>
    <string name="label_permission_denied">Permission Denied</string>
    <string name="label_confirm_delete_item">Anda Yakin ingin menghapus item ini ?</string>
    <string name="label_anddress">Alamat : Jalan lintas Tebo-Bungo Km.4</string>
    <string name="label_phone_number">No HP : 085155354361</string>
    <string name="label_symbol">++++++++++++++++++++++++++++++++</string>
    <string name="label_symbol_line">===============================</string>
    <string name="label_thanks">TERIMA KASIH</string>
    <string name="label_return_cash_min">Jumlah Kembalian: -</string>
    <string name="label_dine_in">Dine In</string>
    <string name="label_take_away">Take Away</string>
    <string name="label_save_order">Simpan Order</string>
    <string name="menu_save_order">Simpan Order</string>
    <string name="label_camera">Camera</string>
    <string name="label_switch_camera">Switch Camera</string>
    <string name="label_failed_show_camera">Failed show camera</string>
</resources>