<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentasion.payment.PaymentActivity">

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/label_total_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/label_total_rp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal"/>

    <TextView
        android:id="@+id/tvCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cash"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalValue"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMoney"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCash">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMoney"
            android:hint="Tunai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn20000"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_100dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/colorRed"
        app:strokeWidth="@dimen/dimen_2dp"
        android:text="@string/label_20000"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:layout_constraintEnd_toStartOf="@+id/btn50000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMoney"/>

    <Button
        android:id="@+id/btn50000"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_100dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/colorRed"
        app:strokeWidth="@dimen/dimen_2dp"
        android:text="@string/label_50000"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        app:layout_constraintStart_toEndOf="@+id/btn20000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMoney"/>

    <Button
        android:id="@+id/btn100000"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_100dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/colorRed"
        app:strokeWidth="@dimen/dimen_2dp"
        android:text="@string/label_100000"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:layout_constraintEnd_toStartOf="@+id/btn200000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn20000"/>

    <Button
        android:id="@+id/btn200000"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_100dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/colorRed"
        app:strokeWidth="@dimen/dimen_2dp"
        android:text="@string/label_200000"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        app:layout_constraintStart_toEndOf="@+id/btn100000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn50000"/>

    <Button
        android:id="@+id/btnCharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_charge"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/viewCashType"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn100000"/>

    <TextView
        android:id="@+id/tvCashType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jenis Pembelian"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewCashType"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDineIn"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:textColor="@color/colorRed"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="Dine In"
        app:strokeWidth="3dp"
        app:strokeColor="@color/colorRed"
        app:layout_constraintEnd_toStartOf="@+id/btnTakeAway"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCashType"/>

    <Button
        android:id="@+id/btnTakeAway"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:text="Take Away"
        android:textColor="@color/colorRed"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="3dp"
        app:strokeColor="@color/colorRed"
        app:layout_constraintStart_toEndOf="@+id/btnDineIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCashType"/>

    <TextView
        android:id="@+id/tvReturnCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_return_cash"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnDineIn"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>