<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentasion.order.OrderListActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_name"
        app:endIconMode="dropdown_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/viewNameCustomer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_2dp"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNameLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0dp"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSubTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNameCustomer"
        tools:listitem="@layout/item_list_order" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/label_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveOrder"/>

    <TextView
        android:id="@+id/tvTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/label_total_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveOrder"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_16dp"
        android:layout_marginStart="@dimen/dimens_8dp"
        android:layout_marginEnd="@dimen/dimens_8dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:background="@drawable/line_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvTotal"/>

    <TextView
        android:id="@+id/tvPPN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/label_ppn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view"/>

    <TextView
        android:id="@+id/tvPPNValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/label_total_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view"/>

    <TextView
        android:id="@+id/tvSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/label_sub_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvPPN"/>

    <TextView
        android:id="@+id/tvSubTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/label_total_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvPPNValue"/>

    <Button
        android:id="@+id/btnSaveOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_save_order"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_4dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCharge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_charge"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>